# yenilmez

./: .gitignore  CMakeLists.txt  LICENSE  README.md  collector.h  docker-compose.yml  libyenilmez.pc.in
.docker/development/: Dockerfile  entrypoint.sh
cmake/: Definitions.cmake
doc/: CONTRIBUTING.md  INSTALL.md  REFERENCES.md
example/: CMakeLists.txt  README.md  yenexample.c
src/: CMakeLists.txt  assertion.c  assertion.h  collector.c  colors.c  colors.h  counters.c  counters.h  jobs.c  jobs.h  sighands.c  sighands.h  yenilmez.c  yenilmez.h
